Added option to suppress warnings about calling into 'sun.misc.unsafe' when using a JDK 24+.