@@ -7,6 +7,7 @@ ARGS=$* # all parameter
 ECHO_SWITCH=OFF
 BULK_SWITCH=ON
 CONSOLE_SWITCH=jline
+SUN_MISC_UNSAFE=ON
 
 # evaluate parameter
 for ARG in ${ARGS}
@@ -27,13 +28,22 @@ do
   then
     CONSOLE_SWITCH=base
   fi
+  if [[ "${ARG}" == "--sun-misc-unsafe" ]]
+  then
+    SUN_MISC_UNSAFE=OFF
+  fi
 done
 echo -e "\necho = ${ECHO_SWITCH}"
 echo -e "bulk = ${BULK_SWITCH}"
-echo -e "console = ${CONSOLE_SWITCH}\n"
+echo -e "console = ${CONSOLE_SWITCH}"
+echo -e "sun_misc_unsafe = ${SUN_MISC_UNSAFE}\n"
 if [[ "${CONSOLE_SWITCH}" == "base" ]]
 then
   CONSOLE_PROPERTY=-Djdk.console=java.base
+fi
+if [[ "${SUN_MISC_UNSAFE}" == "OFF" ]]
+then
+  SUN_MISC_UNSAFE_OPTION=--sun-misc-unsafe-memory-access=allow
 fi
 
 # checkout JAVA_HOME
@@ -50,4 +60,5 @@ ${BIN_JAVA} -Djava.security.egd=file:/dev/urandom \
   -Dde.christofreichardt.jca.shamirsdemo.console.echo=${ECHO_SWITCH} \
   ${CONSOLE_PROPERTY} \
   -Dde.christofreichardt.jca.shamirsdemo.console.bulk=${BULK_SWITCH} \
+  ${SUN_MISC_UNSAFE_OPTION} \
   -jar target/shamirs-demo-${SHAMIRS_VERSION}.jar
